[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photos-fix"
version = "0.1.0"
description = "Diagnóstico y corrección de metadatos EXIF en macOS Photos"
requires-python = ">=3.12,<3.14"
dependencies = [
    "Pillow>=10.4",
    "check-orientation>=0.0.5",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "huggingface-hub>=1.7.2",
    "numpy<2",
    "onnxruntime==1.18.0",
    "opencv-python-headless==4.10.0.84",
    "piexif>=1.1.3",
    "pillow-heif>=0.18",
    "rapid-orientation>=0.0.11",
    "rich>=13.0",
    "structlog>=24.1",
    "torch==2.2.2",
]

[project.scripts]
photos-fix = "photos_fix.cli:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "commitizen>=4.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["photos_fix"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "photos_fix/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = false
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
